# verifier

./: CMakeLists.txt  README.md
src/model/: kripke_model.cc  kripke_model.cpp  kripke_model.h  main.cc  model.cc  model.cpp  model.h  parser.cc  parser.h  path.cc  path.h  specific_model.h
src/parser/: parser.cc  parser.h
src/token/: and_token.h  atom_token.h  box_token.h  diamond_token.cc  diamond_token.h  not_token.cc  not_token.h  token.cc  token.h  true_token.cc
src/token/kripke/: and_token.cc  and_token.h  atom_token.cc  atom_token.h  box_token.cc  box_token.h  diamond_token.cc  diamond_token.h  kripke_token.h  not_token.cc  not_token.h  or_token.cc  or_token.h  true_token.h
src/token/ltl/: and_token.cc  and_token.h  atom_token.cc  atom_token.h  box_token.cc  box_token.h  f_token.cc  f_token.h  ltl_token.h  next_token.cc  next_token.h  not_token.cc  not_token.h  or_token.cc  or_token.h  until_token.cc  until_token.h  weak_until_token.cc  weak_until_token.h
test/model/: kripke_model_test.cc  kripke_model_test.h
